--- a/downloads.html
+++ b/downloads.html
@@ -15,15 +15,15 @@
 		<div class="nav">
 			<h1 class="logo"><b>rojers</b>cripts</h1>
 			<ul class="pages">
-				<li><a href="https://www.xvideos.com">главная</a></li>
+				<li><a href="index.html">главная</a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
 				<li><a href="https://www.xvideos.com">разработчики</a></li>
-				<li><a tagret="_blank" href="https://www.xvideos.com">скрипты для скачивания</a></li>
+				<li><a tagret="_blank" href="downloads.html">скрипты для скачивания</a></li>
 			</ul>
 		</div>
 	</nav>
 	<div class="ebaniy-obema">
-		<p style="text-align:center">Совместные работы от разработчиков rojerscripts</p>
+		<p style="text-align:center">Скрипты для скачивания</p>
 	</div>
 </body>
 </html>
