--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 	</nav>
 	<div class="ebaniy-obema">
-		<p style="text-align:center">тут ничего нет пока но луня обещал кинуть софт</p>
+		<p style="text-align:center">Совместные работы от разработчиков rojerscripts</p>
 	</div>
 </body>
 </html>
