--- a/downloads.html
+++ b/downloads.html
@@ -15,10 +15,10 @@
 		<div class="nav">
 			<h1 class="logo"><b>rojers</b>cripts</h1>
 			<ul class="pages">
-				<li><a href="index.html">главная</a></li>
+				<li><a href="index">главная</a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
 				<li><a href="https://www.xvideos.com">разработчики</a></li>
-				<li><a tagret="_blank" href="downloads.html">скрипты для скачивания</a></li>
+				<li><a tagret="_blank" href="downloads">скрипты для скачивания</a></li>
 			</ul>
 		</div>
 	</nav>
