--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="nav">
 			<h1 class="logo"><b>rojers</b>cripts</h1>
 			<ul class="pages">
-				<li><a href="https://www.xvideos.com"><b>главная</b></a></li>
+				<li><a href="index"><b>главная</b></a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
 				<li><a href="https://www.xvideos.com">разработчики</a></li>
 				<li><a tagret="_blank" href="downloads">скрипты для скачивания</a></li>
