--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<link rel="stylesheet" href="/fonts/style.css">
 	<link rel="stylesheet" href="/css/style.css">
 	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="aboba"></script>
-	<title> rojerscripts | test</title>
+	<title> rojerscripts</title>
 </head>
 <body>
 	<nav>
 		<div class="nav">
-			<h1 class="logo"><b>rojers</b>cripts | <b>main</b> </h1>
+			<h1 class="logo"><b>rojerscripts | main</b> </h1>
 			<ul class="pages">
 				<li><a href="#"><b>главная</b></a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
