--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="nav">
 			<h1 class="logo"><b>rojerscripts | main</b> </h1>
 			<ul class="pages">
-				<li><a href="#"><b>главная</b></a></li>
+				<li><a href="index"><b>главная</b></a></li>
 				<li><a href="https://www.xvideos.com"><b>информация</b></a></li>
 				<li><a href="https://www.xvideos.com"><b>о разработчиках</b></a></li>
 				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
@@ -25,6 +25,8 @@
 	</nav>
 	<div class="ebaniy-obema">
 		<p style="text-align:center">Совместные работы от разработчиков rojerscripts</p>
+	</div>
+	<div class="circle">
 	</div>
 </body>
 </html>
