--- a/downloads.html
+++ b/downloads.html
@@ -10,7 +10,6 @@
 	<title> rojerscripts | downloads</title>
 </head>
 <body>
-	<script src="js/script.js"></script>
 	<nav>
 		<div class="nav">
 			<h1 class="logo"><b>rojerscripts | downloads</b> </h1>
@@ -18,7 +17,7 @@
 				<li><a href="index"><b>главная</b></a></li>
 				<li><a href="https://www.xvideos.com"><b>информация</b></a></li>
 				<li><a href="https://www.xvideos.com"><b>о разработчиках</b></a></li>
-				<li><a tagret="_blank" href="downloads"><b>скриfпты для скачивания</b></a></li>
+				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
 			</ul>
 		</div>
 	</nav>
