--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
 	<div class="ebaniy-obema">
 		<p style="text-align:center">Совместные работы от разработчиков rojerscripts</p>
 	</div>
+	<div class="center">
+        <p style="font-weight: 700; font-size: 28px;">rojerscripts</p>
+        <a href="">telegram</a>
+        <a href="">vk</a>
+        <a href="">github</a>
+        <a href="">blasthack</a>
+        <a href="">lolz</a>
 </body>
 </html>
