--- a/downloads.html
+++ b/downloads.html
@@ -15,7 +15,7 @@
 			<h1 class="logo"><b>rojerscripts | downloads</b> </h1>
 			<ul class="pages">
 				<li><a href="index"><b>главная</b></a></li>
-				<li><a href="https://www.xvideos.com"><b>информация</b></a></li>
+				<li><a href="info"><b>информация</b></a></li>
 				<li><a href="https://www.xvideos.com"><b>о разработчиках</b></a></li>
 				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
 			</ul>
