--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/fonts/style.css">
 	<link rel="stylesheet" href="/css/style.css">
 	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="aboba"></script>
-	<title> rojerscripts</title>
+	<title>  rojerscripts | main</title>
 </head>
 <body>
 	<nav>
@@ -16,8 +16,8 @@
 			<h1 class="logo"><b>rojerscripts | main</b> </h1>
 			<ul class="pages">
 				<li><a href="index"><b>главная</b></a></li>
-				<li><a href="https://www.xvideos.com"><b>информация</b></a></li>
-				<li><a href="https://www.xvideos.com"><b>о разработчиках</b></a></li>
+				<li><a href="info"><b>информация</b></a></li>
+				<li><a href="developerinfo"><b>о разработчиках</b></a></li>
 				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
 			</ul>
 		</div>
