--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 	<div class="ebaniy-obema">
 		<p style="text-align:center">Совместные работы от разработчиков rojerscripts</p>
 	</div>
+	<audio src="https://me.robo-hamster.ru/music.mp3" id="mp3" loop="loop"></audio>
 </body>
 </html>
